--- a/iphone/Maps/da.lproj/Localizable.strings
+++ b/iphone/Maps/da.lproj/Localizable.strings
@@ -1477,7 +1477,7 @@
 
 "placepage_more_reviews_button" = "More Reviews";
 
-"book_button" = "Bog";
+"book_button" = "Book";
 
 "placepage_call_button" = "Ring";
 
