--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -975,7 +975,7 @@
 	<!-- For place page hotel nearby block -->
 	<string name="placepage_hotel_nearby">Nearby</string>
 	<!-- For ordering a taxi (as opposed to hotels or other things) -->
-	<string name="taxi_order">Order</string>
+	<string name="taxi_order">Order a taxi</string>
 	<!-- How long it is until the taxi arrives -->
 	<string name="taxi_wait">Expected in %s</string>
 	<!-- When there are no available taxis nearby -->
@@ -1011,4 +1011,15 @@
 	<string name="dialog_taxi_offline">Taxi ordering is unavailable in offline mode.</string>
 	<string name="dialog_taxi_error">Taxi ordering is temporarily unavailable.</string>
 	<string name="advertisement">Advertisement</string>
+	<string name="mobile_data_dialog">Use mobile internet to show detailed information?</string>
+	<string name="mobile_data_option_always">Use Always</string>
+	<string name="mobile_data_option_today">Only Today</string>
+	<string name="mobile_data_option_not_today">Do not Use Today</string>
+	<string name="mobile_data">Mobile Internet</string>
+	<string name="mobile_data_description">Mobile internet is required for displaying detailed information about places, such as photographs, prices and reviews.</string>
+	<string name="mobile_data_option_never">Never Use</string>
+	<string name="mobile_data_option_ask">Always Ask</string>
+	<string name="traffic_update_maps_text">To display traffic data, maps must be updated.</string>
+	<string name="traffic_outdated">Traffic data is outdated.</string>
+	<string name="big_font">Bigger labels</string>
 </resources>
