--- a/iphone/Maps/ru.lproj/Localizable.strings
+++ b/iphone/Maps/ru.lproj/Localizable.strings
@@ -1637,7 +1637,7 @@
 "placepage_hotel_nearby" = "Рядом";
 
 /* For ordering a taxi (as opposed to hotels or other things) */
-"taxi_order" = "Заказать";
+"taxi_order" = "Заказать такси";
 
 /* How long it is until the taxi arrives */
 "taxi_wait" = "Ожидание %s";
@@ -1701,3 +1701,25 @@
 "dialog_taxi_error" = "Заказ такси временно недоступен.";
 
 "advertisement" = "Реклама";
+
+"mobile_data_dialog" = "Загружать дополнительную информацию через мобильный интернет?";
+
+"mobile_data_option_always" = "Всегда";
+
+"mobile_data_option_today" = "Только сегодня";
+
+"mobile_data_option_not_today" = "Не сегодня";
+
+"mobile_data" = "Мобильный интернет";
+
+"mobile_data_description" = "Мобильный интернет требуется для отображения более детальной информации о местах: фотографий, цен, отзывов.";
+
+"mobile_data_option_never" = "Никогда не использовать";
+
+"mobile_data_option_ask" = "Всегда спрашивать";
+
+"traffic_update_maps_text" = "Для отображения пробок необходимо обновить карты.";
+
+"traffic_outdated" = "Данные о пробках устарели.";
+
+"big_font" = "Увеличенные подписи";
